fix wrap paddings

--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -46,6 +46,7 @@ a {
 .wrap {
 	max-width: 1280px;
 	margin: 0 auto;
+	padding: 0 30px;
 }
 
 .btn {
@@ -96,7 +97,7 @@ a {
 	}
 	.wrap {
 		height: 100%;
-		padding: 0 0 150px;
+		padding-bottom: 150px;
 	}
 }
 
