--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -15,12 +15,8 @@
 	}
 	.logo {
 		float: left;
-		margin-left: 30px;
 		line-height: 80px;
 	}
-	.wrap {
-		padding: 0;
-}
 }
 
 .nav-primary {
